out/sample/work/bad/bad/mastery/out-000.java
class Bad {

    void foo() {
        
<<<<<<< commits-sample/bad/bad/A/bad.java
for (int i = 0; i < 100; i++) {
            bar(i);
        }for (int i = 1; i < 100; i++) {
            System.out.println(i);
        }
=======
for (int i = 1; i < 100; i++) {
            System.out.println(i);
        }return;
>>>>>>> commits-sample/bad/bad/B/bad.java

    }
}
